--- a/Dokumentation/Enddokumentation/Loesungskonzept/Controller.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Controller.tex
@@ -1,5 +1,5 @@
-﻿\subsubsection{Controller}
-\lable{sec:Controller}
+\subsubsection{Controller}
+\label{sec:Controller}
 	Die Controller-Hardware steuert die Motoren der Ballzuführung, der Stepper für die Ausrichtung der Apparatur und die Motoren zur Beschleunigung der Bälle. Sobald der Controller das Startsignal vom Master erhält, wird dieser den Motor zur Ballbeschleunigung aktivieren und hoch drehen lassen. Weiter erhält der Controller vom Master die Angabe, in welchem Winkel sich der Korb befindet. Anhand dieser wird die benötigten Schritte berechnen und die resultierenden Befehle an die Motorsteuerung absetzen. Sobald die Apparatur die richtige Ausrichtung eingenommen hat, wird die Ballzuführung aktiviert, um die Bälle in den Korb zu befördern. Mittels eines kleinen Sensors werden die Bälle gezählt und wenn der letzte Ball abgefeuert wurde, wird dies dem Master signalisiert.\\
 	\begin{wrapfigure}{r}{0.45\textwidth}
 		\centering
