--- a/Dokumentation/Enddokumentation/Einleitung.tex
+++ b/Dokumentation/Enddokumentation/Einleitung.tex
@@ -1,7 +1,7 @@
-﻿\section{Einleitung}
-Im heutigen Arbeitsumfeld ist es unerlässlich, dass man in der Lage ist in einem interdisziplinär zusammengesetzten Team, zu arbeiten. An diesem Punkt setzt die Hochschule Luzern Technik \& Architektur mit dem Modul \enquote{Produktentwicklung} (PREN) an. Das Ziel dieses Moduls ist, anhand einer Aufgabenstellung einen Entwicklungsprozess durch zu arbeiten und in einem interdisziplinären Team eine Lösung zu erarbeiten und umzusetzen. Die Teams bestehen aus Studierenden aus den Studiengängen Elektrotechnik, Informatik und Maschinenbau. Dieses Modul ist in zwei Teile aufgeteilt und erstreckt sich über zwei Semester. Im PREN 1 wird anhand der Aufgabenstellung ein Lösungskonzept entwickelt und erarbeitet. Dieses Konzept wird im anschliessenden Semester im Modul PREN 2 umgesetzt.\\
+\section{Einleitung}
+Im heutigen Arbeitsumfeld ist es unerlässlich, dass man in der Lage ist in einem interdisziplinär zusammengesetzten Team, zu arbeiten. An diesem Punkt setzt die Hochschule Luzern Technik \& Architektur mit dem Modul \enquote{Produktentwicklung} (PREN) an. Das Ziel dieses Moduls ist, anhand einer Aufgabenstellung einen Entwicklungsprozess durch zu arbeiten, in einem interdisziplinären Team eine Lösung zu erarbeiten und umzusetzen. Die Teams bestehen aus Studierenden aus den Studiengängen Elektrotechnik, Informatik und Maschinenbau. Dieses Modul ist in zwei Teile aufgeteilt und erstreckt sich über zwei Semester. Im PREN 1 wird anhand der Aufgabenstellung ein Lösungskonzept entwickelt und erarbeitet. Dieses Konzept wird im anschliessenden Semester im Modul PREN 2 umgesetzt.\\
 \\
-In diesem Rahmen erhielten die Teams dieses Jahr die Aufgabe, einen autonomen Ballwerfer zu erarbeiten. Das Ziel besteht darin, fünf Tennisbälle, in möglichst kurzer Zeit, in einen Korb zu befördern. Als weiteres Bewertungskriterium gilt das Gewicht des Produkts, welches ab zwei Kilogramm ein stufenweiser Punkteabzug zur Folge hat. Der Korb befindet sich in einem Spielfeld - welches seitlich und in der Höhe begrenzt ist - am hinteren Ende an einer Wand und ist horizontal verschiebbar. Die endgültige Position des Korbes wird kurz vor der Abgabe des Startsignals durch einen Dozenten festgelegt, und ist somit nicht bekannt. Die Übermittlung des Startsignals muss drahtlos erfolgen, nach Ausführen der Aufgabe, muss entweder ein akustisches, oder ein optisches Endsignal ausgegeben werden.\\
+In diesem Rahmen erhielten die Teams dieses Jahr die Aufgabe, einen autonomen Ballwerfer zu erarbeiten. Das Ziel besteht darin, fünf Tennisbälle, in möglichst kurzer Zeit, in einen Korb zu befördern. Als weiteres Bewertungskriterium gilt das Gewicht des Produkts, welches ab zwei Kilogramm einen stufenweisen Punkteabzug zur Folge hat. Der Korb befindet sich in einem Spielfeld - welches seitlich und in der Höhe begrenzt ist - am hinteren Ende einer Wand und ist horizontal auf einer Linie verschiebbar. Die endgültige Position des Korbes wird kurz vor der Abgabe des Startsignals durch einen Dozenten festgelegt, und ist somit vor Start nicht bekannt. Die Übermittlung des Startsignals muss drahtlos erfolgen, nach Ausführen der Aufgabe, muss ein akustisches, oder optisches Endsignal ausgegeben werden.\\
 \\
 Das Ziel der Arbeit ist, die Aufgabenstellung erfolgreich in einem Apparat umzusetzen. Dabei hat sich unser Team eigene Ziele gesetzt und gewichtet. Diese sind:
 \begin{enumerate}
