Anhang Stepper hinzugefügt

--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -103,5 +103,6 @@
 		\pagenumbering{Roman} % römische Nummerierung des Anhangs (Grosse Buchstaben)
 		\section{Anhang}	            
 			\input{Enddokumentation/Anhang/Berechnungen}
+			\input{Enddokumentation/Anhang/StepperAnhang}
 	\end{appendix}  
 \end{document}
