Unnötige Kapitel entfernt

--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -60,7 +60,7 @@
     % Tests
     %
     \newpage
-    \input{Enddokumentation/Tests/Tests}
+%    \input{Enddokumentation/Tests/Tests}
     \input{Funktionstests/Ballmaschine}
     \input{Funktionstests/Pneumatikzylinder}
     \input{Funktionstests/BallmaschineDrehzahl}
