--- a/Dokumentation/Enddokumentation/Loesungskonzept/Foerderband.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Foerderband.tex
@@ -1,5 +1,5 @@
-﻿\subsubsection{Förderband}
-Da die Schwungräder durch den Abwurf um ca. 30% abgebremst werden, müssen Sie nach jedem Wurf erneut auf die gewünschte Drehzahl beschleunigt werden. Deshalb hat die Zuführung der Bälle in Abständen zu erfolgen. Weiter müssen die einzelnen Tennisbälle immer mit der gleichen Geschwindigkeit bei den Schwungrädern eintreffen, damit eine konstante Wurfweite entsteht. Die beste Art, beides zusammen zu realisieren ist ein Förderband. Das Förderband wird zwischen den zwei Acrylglasplatten aufgespannt. Der Antrieb des Förderbandes erfolgt mit einem DC-Motor. Dieser wird mit einem Verhältnis von !!!!!!!!!!!!!!!!!!!!!i=5:1 übersetzt, um das benötigte Drehmoment an die Antriebstrommel von !!!!!!!!!!!!!!!!!!!!!!!Nm zu übertragen. Die Berechnungen dazu sind im Anhang ersichtlich. Auf dem Förderband, welches aus einem Flachbandriemen besteht, sind konvexe Führungsblätter angebracht. Diese sind so ausgerundet, damit der Ball möglichst lange geführt werden kann und die Führungsblätter nicht in Berührung der Schwungräder kommen. Die Führungsblätter werden voraussichtlich mit dem Förderband verschweisst.
+\subsubsection{Förderband}
+Da die Schwungräder durch den Abwurf um ca. 30\% abgebremst werden, müssen Sie nach jedem Wurf erneut auf die gewünschte Drehzahl beschleunigt werden. Deshalb hat die Zuführung der Bälle in Abständen zu erfolgen. Weiter müssen die einzelnen Tennisbälle immer mit der gleichen Geschwindigkeit bei den Schwungrädern eintreffen, damit eine konstante Wurfweite entsteht. Die beste Art, beides zusammen zu realisieren ist ein Förderband. Das Förderband wird zwischen den zwei Acrylglasplatten aufgespannt. Der Antrieb des Förderbandes erfolgt mit einem DC-Motor. Dieser wird mit einem Verhältnis von !!!!!!!!!!!!!!!!!!!!!i=5:1 übersetzt, um das benötigte Drehmoment an die Antriebstrommel von !!!!!!!!!!!!!!!!!!!!!!!Nm zu übertragen. Die Berechnungen dazu sind im Anhang ersichtlich. Auf dem Förderband, welches aus einem Flachbandriemen besteht, sind konvexe Führungsblätter angebracht. Diese sind so ausgerundet, damit der Ball möglichst lange geführt werden kann und die Führungsblätter nicht in Berührung der Schwungräder kommen. Die Führungsblätter werden voraussichtlich mit dem Förderband verschweisst.
 \newpage
 \begin{figure} [h!]
 	\centering
