--- a/Dokumentation/Enddokumentation/Projektplanung_Management/PlanungManagement.tex
+++ b/Dokumentation/Enddokumentation/Projektplanung_Management/PlanungManagement.tex
@@ -6,4 +6,4 @@
 	Diese kann Teilaufgaben definieren und sie an andere Teammitglieder zur Bearbeitung delegieren. 
 	Die Hierarchie im Team ist bewusst flach und ohne eigentlichen Projektleiter gehalten. 
 	Entscheide werden im Plenum diskutiert und gefällt. Die Leitung oder Führung einer Besprechung obliegt dem verantwortlichen Teammitglied  des jeweiligen Themas.
-	Mit dieser Teamstruktur ist gewährleistet, dass alle Mitglieder Verantwortung tragen können und müssen. Dies soll Motivation und Eigeninitiative fördern.
+	Mit dieser Teamstruktur ist gewährleistet, dass alle Mitglieder Verantwortung tragen können und müssen. Dies soll die Motivation und die Eigeninitiative fördern.
