--- a/Dokumentation/Enddokumentation/Projektplanung_Management/Kosten.tex
+++ b/Dokumentation/Enddokumentation/Projektplanung_Management/Kosten.tex
@@ -4,7 +4,7 @@
 
   \centering
   \caption{Kostentabelle}
-    \begin{tabular}{p{0.5cm}p{0.8cm}rp{3cm}rr}
+    \begin{tabular}{rcrcc}
     \textbf{Kategorie} & \textbf{Stk} & \textbf{Bezeichnung} & \textbf{Preis / Stk} & \textbf{Stk * Preis} \\
 
     Zuführung: & 1     & Flachbandriemen &  Fr.        50.00  &  Fr.        50.00  \\
@@ -20,7 +20,7 @@
                & 1     & Hardware (Controller) &  Fr.        50.00  &  Fr.        50.00  \\
                & 1     & Hardwarekomponenten &  Fr.        40.00  &  Fr.        40.00  \\
                &       &       &       &  \\
-Antrieb Schwungräder: & 2     & Zahnrad Z15 &  Fr.          2.88  &  Fr.          5.76  \\
+    Antrieb Schwungräder: & 2     & Zahnrad Z15 &  Fr.          2.88  &  Fr.          5.76  \\
           & 2     & Zahnrad Z30 &  Fr.          4.05  &  Fr.          8.10  \\
           & 2     & Zahnrad Z15 &  Fr.          3.44  &  Fr.          6.88  \\
           & 2     & Zahnrad Z30 &  Fr.          5.50  &  Fr.         11.00  \\
