falsches Zeichen entfernt

--- a/Dokumentation/Enddokumentation/Loesungskonzept/Controller.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Controller.tex
@@ -1,4 +1,4 @@
-l\subsubsection{Controller}
+\subsubsection{Controller}
 \label{sec:Controller}
 	Die Controller-Hardware steuert die Motoren der Ballzuführung, der Stepper für die Ausrichtung 
 	der Abwurfeinheit und die Motoren zur Beschleunigung der Bälle. Sobald der Controller das Startsignal vom Smartphone erhält, 
