--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -46,15 +46,25 @@
     \input{Enddokumentation/Loesungskonzept/Funktionsbeschreibung}
     \newpage
     \input{Enddokumentation/Loesungskonzept/Geraeteuebersicht}
+        \newpage
     \input{Enddokumentation/Loesungskonzept/Startgeraet}
+        \newpage
     \input{Enddokumentation/Loesungskonzept/SmartphoneAlsMaster}
+        \newpage
     \input{Enddokumentation/Loesungskonzept/Controller}
+        \newpage
     \input{Enddokumentation/Loesungskonzept/AufbauMechanik}
+        \newpage
     \input{Enddokumentation/Loesungskonzept/Stelleinheit}
+        \newpage
     \input{Enddokumentation/Loesungskonzept/Foerderband}
+        \newpage
     \input{Enddokumentation/Loesungskonzept/Schwungraeder}
+        \newpage
     \input{Enddokumentation/Loesungskonzept/Versorgungskonzept}
+        \newpage
     \input{\BrushlessPath/Hardwarezusammenarbeit}
+        \newpage
     \input{Enddokumentation/Loesungskonzept/Softwarearchitektur}
 %    %
     % Tests
