Antriebsstrang in eigenes tex-File

--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -53,6 +53,7 @@
     \input{Enddokumentation/Loesungskonzept/Stelleinheit}
     \input{Enddokumentation/Loesungskonzept/Foerderband}
     \input{Enddokumentation/Loesungskonzept/Schwungraeder}
+    \input{Enddokumentation/Loesungskonzept/Antriebsstrang}
     \input{Enddokumentation/Loesungskonzept/Versorgungskonzept}
     \input{\BrushlessPath/Hardwarezusammenarbeit}
     \input{Enddokumentation/Loesungskonzept/Softwarearchitektur}
