--- a/Dokumentation/Enddokumentation/Loesungskonzept/Antriebsstrang.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Antriebsstrang.tex
@@ -1,7 +1,7 @@
-\subsubsection{Antriebsstrang}
+﻿\subsubsection{Antriebsstrang}
 
-Der Antriebsstrang kann auf verschiedene Arten realisiert werden. Drei ausgewählte Varianten wurden betreffend ihrem verfügbares Drehmoment, ihren Kosten und ihrem Gewicht beurteilt.\
-Die Variante A besteht aus einem Antriebsmotor, von welchem das Moment über verschieden Zahnräder zu den Schwungrädern übertragen wird.      
+Der Antriebsstrang kann auf verschiedene Arten realisiert werden. Drei ausgewählte Varianten wurden betreffend ihrem verfügbares Drehmoment, ihren Kosten und ihrem Gewicht beurteilt.\\
+Die Variante A besteht aus einem Antriebsmotor, von welchem das Moment über verschieden Zahnräder zu den Schwungrädern übertragen wird.    
 
 
 
@@ -17,10 +17,12 @@ Die Variante A besteht aus einem Antriebsmotor, von welchem das Moment über ver
           & 2x    & Zahnrad Z90     & $0.257 Nm / 4.03 Nm$ &  3.44CHF & $57.0 g$ \\
           & 2x    & zusätzl. Achsen & -                    &  0.00CHF & $10.0 g$ \\
           & 2x    & Kugellager      & -                    &  1.76CHF & $4.9 g$  \\
-          &       &                 &                      &          &  \\
-          &       &                 &                      &          &  \\
+       
+      
           & \textbf{Tot.} &  & \textbf{0.257Nm} & \textbf{64.59CHF} & \textbf{211.0g} \\
-    \multirow{10}[2]{*}{B} 
+    \multirow{10}[2]{*}{B}
+  	  &       &                 &                      &          &  \\
+          &       &                 &                      &          &  \\
           & 2x    & Motor           & $0.1256 Nm$          & 34.95CHF & $57.0 g$ \\
           & 2x    & Zahnrad Z15     & $0.1256 Nm / 0.15 Nm$& 2.88CHF  & $2.5 g$  \\
           & 2x    & Zahnrad Z30     & $0.257 Nm / 0.68 Nm$ & 4.05CHF  & $9.4 g$  \\
@@ -29,9 +31,11 @@ Die Variante A besteht aus einem Antriebsmotor, von welchem das Moment über ver
           & 4x    & Kugellager      & -                    & 1.76CHF  & $4.9 g$  \\
           & 2x    & zusätzl. Achsen &                      & 0.00CHF  & $10.0 g$ \\
           & 2x    & Motorenaufnahme &                      & 0.00CHF  & $8.0 g$  \\
-          &       &                 &                      &          &  \\
+        
           & \textbf{Tot.} &       & \textbf{0.514Nm} & \textbf{108.68CHF} & \textbf{201.2g} \\
     \multirow{9}[2]{*}{C} 
+          &       &                 &                      &          &  \\
+          &       &                 &                      &          &  \\
           & 1x    & Motor           & $0.1256 Nm$          & 34.95CHF & $57.0 g$ \\
           & 1x    & Zahnrad         & $0.1256 Nm / 0.11 Nm$& 8.02CHF  & $10.0 g$ \\
           & 1x    & Zahnrad         & $0.257 Nm / 0.96 Nm$ & 15.67CHF & $102.0 g$ \\
