--- a/Dokumentation/Enddokumentation/Loesungskonzept/Antriebsstrang.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Antriebsstrang.tex
@@ -10,7 +10,7 @@ Die Variante A besteht aus einem Antriebsmotor, von welchem das Moment über ver
 \begin{figure}[h!]
     \begin{tabular}{p{0.5cm}p{0.8cm}rp{3cm}rr}
     \textbf{Variante} & \multicolumn{2}{r}{\textbf{beinhaltet}} & \textbf{vorh. / zul. Momente (Nutzen)} & \textbf{Preis} & \textbf{Gewicht} \\\hline
-
+          &       &                 &                      &          &  \\
     \multirow{9}[2]{*}{A}
           & 1x    & Motor           & $0.126 Nm$           & 34.95CHF & $57.0 g$ \\
           & 2x    & Zahnrad Z22     & $0.126 Nm / 0.33 Nm$ &  9.62CHF & $5.1 g$  \\
@@ -43,11 +43,10 @@ Die Variante A besteht aus einem Antriebsmotor, von welchem das Moment über ver
           & 1x    & Riemen          & $42.83 N / Fzul=300 N$ & 41.00CHF & $10.0 g$ \\
           & 4x    & Kugellager      &                      & 1.76CHF  & $4.9 g$ \\
           & 3x    & Achse           &                      & 0.00CHF  & $10 g$ \\
-          &       &                 &                      &          &  \\
           & \textbf{Tot.} &       & \textbf{0.257Nm} & \textbf{139.92CHF} & \textbf{312.6g} \\
     \end{tabular}%
  	\centering
-    \caption{Name der Tabelle ergänzen!!!!!}
+    \caption{Nutzen-Kostentabelle}
     \label{tab:addlabel}%
 \end{figure}
 Aufgrund des hohen Drehmomentes und des geringen Gewichtes bei mittelmässigen Kosten, ist die Variante B die idealste Lösung für den Antriebsstrang. Es wird ein bürstenloser Elektromotor verwendet. Die Ansteuerung des Motors ist sehr anspruchsvoll und in Kapitel \ref{fig:Schwungräder} vollständig beschrieben.
