Test-Files überarbeitet + neu AcrylglasTest

--- a/Dokumentation/Enddokumentation/Tests/BrushlessMotorTest.tex
+++ b/Dokumentation/Enddokumentation/Tests/BrushlessMotorTest.tex
@@ -1,4 +1,4 @@
-\subsection{Brushless-Motor-Test}
+\subsection{Brushless-Motor}
     \input{\BrushlessPath/Ansteuerung}
     \newpage
     \input{\BrushlessPath/Testbericht}
