--- a/Dokumentation/Funktionstests/Ballmaschine.tex
+++ b/Dokumentation/Funktionstests/Ballmaschine.tex
@@ -5,7 +5,7 @@
 \textit{Datum}:           & 18.10.2014   \\
 \textit{Ort}:             & Labor HSLU \\
 \textit{Tester}:          & Gruppe 32 \\
-\textit{Ziel des Testes}: & Das Ziel dieses Testes bestand darin, den gebauten Prototyp (Ballmaschine) auf die Genauigkeit und Wurfweite zu testen. Erkenntnisse über die Drehzahl der Räder zu eruieren. Die erforderliche Stromstärke unter realen Bedingungen testen.  \\
+\textit{Ziel des Testes}: & Das Ziel dieses Testes bestand darin: Den gebauten Prototyp (Ballmaschine) auf die Genauigkeit und Wurfweite zu testen, weitere Erkenntnisse über die Drehzahl der Räder zu eruieren und die erforderliche Stromstärke unter realen Bedingungen testen.  \\
 \textit{Fazit / Verbesserungs-\newline vorschlag}: & Die Wurfmaschine kann mit einigen Verbesserungen sehr gute und genaue „Schüsse“ erzielen. Zu verbessern sind:
 \begin{itemize}
     \item Stabilere Achsen
