--- a/Dokumentation/Funktionstests/BallmaschineDrehzahl.tex
+++ b/Dokumentation/Funktionstests/BallmaschineDrehzahl.tex
@@ -4,9 +4,9 @@
 \textit{Typ}              & Ballmaschine \\ 
 \textit{Datum}:           & 06.11.2014   \\
 \textit{Ort}:             & Labor HSLU \\
-\textit{Tester}:          &  Matteo, Yves, Pascal\\
+\textit{Tester}:          & Matteo, Yves, Pascal\\
 \textit{Ziel des Testes}: & Eruieren der Nenndrehzahl der DC-Motoren, Optimaler Wurfwinkel, Drehzahl der Schwungräder.  \\
-\textit{Fazit / Verbesserungs-\newline vorschlag}: & Ballzuführung muss automatisiert gleichbleibend sein damit genaue Aussage über Wurfweite gemacht werden können. 
+\textit{Fazit / Verbesserungs-\newline vorschlag}: & Ballzuführung muss automatisiert und gleichbleibend sein, damit genaue Aussagen über die Wurfweite gemacht werden können. 
 Unterschiedliche Tennisballmarken haben unterschiedliche Eigenschaften betreffend Wurfweite -> Fünf Bälle der „richtigen“ Marke kaufen. \\
 \textit{Ziel erreicht}:& Ja\\
 \end{tabular}
