--- a/Dokumentation/Enddokumentation/Projektplanung_Management/Zeit.tex
+++ b/Dokumentation/Enddokumentation/Projektplanung_Management/Zeit.tex
@@ -13,5 +13,7 @@
     \newpage
 \end{landscape}
 \subsubsection{Erläuterung zur Projektplanung}
-Um eine grösstmögliche Übersicht zu haben, ist die Projektplanung relativ allgemein gehalten. Das heisst, es sind alle Themen und Arbeitsblöcke vorhanden, jedoch ist nicht jeder einzelne Arbeitsschritt der darin anfällt auch aufgeführt. Ebenso ist jeweils nur die verantwortliche Person aufgeführt. Sie trägt die Hauptverantwortung über ein Arbeitsblock, jedoch können auch andere Personen daran mitgearbeitet haben. Zeitangaben sind als Schätzungen zu verstehen. Es wurde kein Journal über die geleistete Arbeitszeit geführt.\\
-Dies ist die Projektplanung über den Zeitraum von PREN1. Arbeiten, die noch nicht fertig sind oder die sowieso über den ganzen Zeitraum des PREN-Moduls laufen, werden Ende PREN1 in eine neue Projektplanung für PREN2 überführt. Diese wird mit derselben Excel-Planung gemacht. Dadurch, dass abgeschlossene und nicht mehr relevante Arbeiten nicht mehr aufgeführt sind, wird die Projektplanung wesentlich übersichtlicher.  
+Um eine grösstmögliche Übersicht zu haben, ist die Projektplanung relativ allgemein gehalten. Das heisst, es sind alle Themen und Arbeitsblöcke vorhanden, jedoch ist nicht jeder einzelne Arbeitsschritt der darin anfällt auch aufgeführt. Ebenso ist pro Arbeitsschritt nur die verantwortliche Person aufgeführt. Sie trägt die Hauptverantwortung über ein Arbeitsblock, jedoch können auch andere Personen daran mitarbeiten. Um die Projektplanung übersichtlich zu halten, sind abgeschlossene und
+nicht mehr relevante Arbeiten nicht im Projektplan aufgeführt.\\
+Zeitangaben sind als Schätzungen zu verstehen. Es wurde kein Journal über die geleistete Arbeitszeit geführt.\\
+Die auf den vorherigen Seite dargestellte Graphik ist die Projektplanung über den Zeitraum von PREN1. Arbeiten, die noch nicht fertig sind oder die über den ganzen Zeitraum des PREN-Moduls laufen, werden Ende PREN1 in eine neue Projektplanung für PREN2 überführt. Für diese Projektplanung wird wiederum die selbe Excel-Vorlage verwendet. 
