--- a/Dokumentation/Enddokumentation/Tests/AcrylglasTest.tex
+++ b/Dokumentation/Enddokumentation/Tests/AcrylglasTest.tex
@@ -1,1 +1,26 @@
-\subsection{Acrylglas-Test}
+\subsection{Acrylglas}
+\begin{tabular}{p{3.6cm}p{9.4cm}}
+	\textit{Typ}              & Lagerung und Bohrung in Acrylglas  \\ 
+	\textit{Datum}:           & 21.11.2014   \\
+	\textit{Ort}:             & Labor HSLU \\
+	\textit{Tester}:          & Matteo, Pascal\\
+	\textit{Ziel des Testes}: & Lassen sich Wälzlager in Acrylglas (PMMA) einpressen und halten sie den herrschenden Druck stand? Verhalten, Möglichkeiten von Bohrungen in 5mm Acrylglas.   \\
+	\textit{Fazit / Verbesserungs-\newline vorschlag}: & Beim ersten Versuch sind Spannungsrisse aufgetreten (siehe Pfeil in Abbildung \ref{abb:LagerPlexiglas}). 
+	Um dem entgegenzuwirken, wurde in einem zweiten Versuch die 16mm Bohrung mit 
+	Schleifpapier gering vergrössert, damit sich das Lager leichter einpressen lässt. 
+	Die Kräfte, die durch das Lager aufgenommen werden können, sind nun zwar 
+	geringer, allerdings für den geplanten Einsatzbereich immer noch genügend. 
+	Durch diese Methode treten auch keine Spannungsrisse mehr auf.  \\
+	
+	Die Bohrung sollte mit einem sehr scharfen Bohrer mit stumpfem Winkel 
+	gemacht werden. Weiter sollte sie gekühlt werden, um ein Durchschmelzen 
+	durch die sehr dünne, noch verbleibende Restwandstärke, zu verhindern.  \\
+	
+	\textit{Ziel erreicht}:& Ja\\
+\end{tabular}
+\begin{figure}[h!]
+	\includegraphics[width=5cm]{Funktionstests/Bilder/LagerPlexiglas.jpg}
+	\centering
+	\caption{Spannungsrisse in Acrylglas-Funktionsmuster} 
+	\label{abb:LagerPlexiglas}
+\end{figure}
