Tests und Kosten angepasst

--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -76,6 +76,7 @@
     \input{Enddokumentation/Projektplanung_Management/PlanungManagement}
     \input{Enddokumentation/Projektplanung_Management/Kosten}
     \input{Enddokumentation/Projektplanung_Management/Zeit}
+    \newpage
     %
     % Reflexion
     %
