--- a/Dokumentation/Enddokumentation/Projektplanung_Management/Kosten.tex
+++ b/Dokumentation/Enddokumentation/Projektplanung_Management/Kosten.tex
@@ -3,8 +3,8 @@
 \begin{figure}[h!]
 
   \centering
-  \caption{Kostentabelle}
-    \begin{tabular}{rcrcc}
+ 
+    \begin{tabular}{rclcc}
     \textbf{Kategorie} & \textbf{Stk} & \textbf{Bezeichnung} & \textbf{Preis / Stk} & \textbf{Stk * Preis} \\
 
     Zuführung: & 1     & Flachbandriemen 	&  Fr. 50.00  &  Fr. 50.00  \\
@@ -43,5 +43,8 @@ Antrieb Schwungräder:  & 2    & Zahnrad Z15 &  Fr. 2.88   &  Fr. 5.76  \\
           &       & \textbf{Total:} & \textbf{} & \textbf{ Fr. 424.68 } \\
 
     \end{tabular}
+    
+    
+     \caption{Kostentabelle}
 
 \end{figure}
