--- a/Dokumentation/Enddokumentation/Tests/AcrylglasTest.tex
+++ b/Dokumentation/Enddokumentation/Tests/AcrylglasTest.tex
@@ -10,12 +10,11 @@
 	Schleifpapier gering vergrössert, damit sich das Lager leichter einpressen lässt. 
 	Die Kräfte, die durch das Lager aufgenommen werden können, sind nun zwar 
 	geringer, allerdings für den geplanten Einsatzbereich immer noch genügend. 
-	Durch diese Methode treten auch keine Spannungsrisse mehr auf.  \\
+	Durch diese Methode treten auch keine Spannungsrisse mehr auf.  
 	
 	Die Bohrung sollte mit einem sehr scharfen Bohrer mit stumpfem Winkel 
 	gemacht werden. Weiter sollte sie gekühlt werden, um ein Durchschmelzen 
 	durch die sehr dünne, noch verbleibende Restwandstärke, zu verhindern.  \\
-	
 	\textit{Ziel erreicht}:& Ja\\
 \end{tabular}
 \begin{figure}[h!]
