--- a/Dokumentation/Funktionstests/BallmaschineDrehzahl.tex
+++ b/Dokumentation/Funktionstests/BallmaschineDrehzahl.tex
@@ -6,7 +6,7 @@
 \textit{Ort}:             & Labor HSLU \\
 \textit{Tester}:          & Matteo, Yves, Pascal\\
 \textit{Ziel des Testes}: & Eruieren der Nenndrehzahl der DC-Motoren, Optimaler Wurfwinkel, Drehzahl der Schwungräder.  \\
-\textit{Fazit / Verbesserungs-\newline vorschlag}: & Ballzuführung muss automatisiert und gleichbleibend sein, damit genaue Aussagen über die Wurfweite gemacht werden können. 
+\textit{Fazit / Verbesserungs-\newline vorschlag}: & Die Ballzuführung muss automatisiert und gleichbleibend sein, damit genaue Aussagen über die Wurfweite gemacht werden können. 
 Unterschiedliche Tennisballmarken haben unterschiedliche Eigenschaften betreffend Wurfweite -> Fünf Bälle der „richtigen“ Marke kaufen. \\
 \textit{Ziel erreicht}:& Ja\\
 \end{tabular}
