--- a/Dokumentation/Enddokumentation/Loesungskonzept/Funktionsbeschreibung.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Funktionsbeschreibung.tex
@@ -13,7 +13,7 @@ wird das akustische Endsignal auf dem Smartphone ausgegeben.\\
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.9\textwidth]{Enddokumentation/Loesungskonzept/Bilder/FlowOnChart_v2.jpg}
-	\caption{Funktionsskizze}
+	\caption{Ablaufdiagramm zur Funktionsbeschreibung}
 	\label{fig:FlowChart}
 \end{figure}
 Die Grafik in Abbildung \ref{fig:FlowChart} stellt den schematischen Ablauf der oben erwähnten Funktionen dar. 
