--- a/Dokumentation/Enddokumentation/Loesungskonzept/Antriebsstrang.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Antriebsstrang.tex
@@ -1,7 +1,7 @@
 ﻿\subsubsection{Antriebsstrang}
 
-Der Antriebsstrang kann auf verschiedene Arten realisiert werden. Drei ausgewählte Varianten wurden betreffend ihrem verfügbares Drehmoment, ihren Kosten und ihrem Gewicht beurteilt.\\
-Die Variante A besteht aus einem Antriebsmotor, von welchem das Moment über verschieden Zahnräder zu den Schwungrädern übertragen wird.    
+Der Antriebsstrang kann auf verschiedene Arten realisiert werden. Drei ausgewählte Varianten wurden betreffend ihrem verfügbarem Drehmoment, ihren Kosten und ihrem Gewicht beurteilt.\\
+Die Variante A besteht aus einem Antriebsmotor, von welchem das Moment über verschieden Zahnräder zu den Schwungrädern übertragen wird. Der Aufbau, bei dem die benötigete Übersetzung realisiert wird, ist nur mit zusätzlichen Achsen realisierbar. Deshalb fällt sofort viel Gewicht an.
 
 
 
@@ -9,7 +9,7 @@ Die Variante A besteht aus einem Antriebsmotor, von welchem das Moment über ver
 
 \begin{figure}[h!]
     \begin{tabular}{p{0.5cm}p{0.8cm}rp{3cm}rr}
-    \textbf{Variante} & \multicolumn{2}{r}{\textbf{beinhaltet}} & \textbf{vorh. / zul. Momente (Nutzen)} & \textbf{Preis} & \textbf{Gewicht} \\\hline
+    \textbf{Variante} & \multicolumn{2}{r}{\textbf{Stück}} & \textbf{vorh. / zul. Momente (Nutzen)} & \textbf{Preis} & \textbf{Gewicht} \\\hline
           &       &                 &                      &          &  \\
     \multirow{9}[2]{*}{A}
           & 1x    & Motor           & $0.126 Nm$           & 34.95CHF & $57.0 g$ \\
@@ -40,7 +40,7 @@ Die Variante A besteht aus einem Antriebsmotor, von welchem das Moment über ver
           & 1x    & Zahnrad         & $0.1256 Nm / 0.11 Nm$& 8.02CHF  & $10.0 g$ \\
           & 1x    & Zahnrad         & $0.257 Nm / 0.96 Nm$ & 15.67CHF & $102.0 g$ \\
           & 4x    & Riemenrad       & $0.257 Nm$           & 8.31CHF  & $21.0 g$ \\
-          & 1x    & Riemen          & $42.83 N / Fzul=300 N$ & 41.00CHF & $10.0 g$ \\
+          & 1x    & Riemen          & $42.83 N /Fzul 300 N $ & 41.00CHF & $10.0 g$ \\
           & 4x    & Kugellager      &                      & 1.76CHF  & $4.9 g$ \\
           & 3x    & Achse           &                      & 0.00CHF  & $10 g$ \\
           & \textbf{Tot.} &       & \textbf{0.257Nm} & \textbf{139.92CHF} & \textbf{312.6g} \\
