--- a/Dokumentation/Enddokumentation/Loesungskonzept/Antriebsstrang.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Antriebsstrang.tex
@@ -1,8 +1,10 @@
 ﻿\subsubsection{Antriebsstrang}
 
 Der Antriebsstrang kann auf verschiedene Arten realisiert werden. Drei ausgewählte Varianten wurden betreffend ihrem verfügbarem Drehmoment, ihren Kosten und ihrem Gewicht beurteilt.\\
-Die Variante A besteht aus einem Antriebsmotor, von welchem das Moment über verschieden Zahnräder zu den Schwungrädern übertragen wird. Der Aufbau, bei dem die benötigete Übersetzung realisiert wird, ist nur mit zusätzlichen Achsen realisierbar. Deshalb fällt sofort viel Gewicht an.
-
+Die Variante A besteht aus einem Antriebsmotor, von welchem das Moment über verschieden Zahnräder zu den Schwungrädern übertragen wird. Der Aufbau, bei dem die benötigete Übersetzung realisiert werden kann, ist nur mit zusätzlichen Achsen realisierbar. Auch müssen die Zahnräder einen genügen grossen Durchmesser haben, damit beide Schwungräder angetrieben werden können. Deshalb fällt sofort viel Gewicht an.\\
+Bei der zweiten Variante B, wird das Drehmoment je Schwungrad seperat von einem Motor zur Verfügung gestellt. Dadurch braucht es keine komplexe Übersetzung und das verfügbare Drehmoment pro Schwungrad ist doppelt so gross.
+Die Variante C besteht aus einem antreibenden Motor. Das Drehmoment wird mittels einem Zahnriemen zu den Schwungrädern übertragen. Da die Schwungräder gegenläufig drehen müssen, muss der Zahnriemen umgelenkt werden.
+Aus diesen drei Methoden gilt die beste zu erruieren.  
 
 
 
@@ -16,10 +18,10 @@ Die Variante A besteht aus einem Antriebsmotor, von welchem das Moment über ver
           & 2x    & Zahnrad Z22     & $0.126 Nm / 0.33 Nm$ &  9.62CHF & $5.1 g$  \\
           & 2x    & Zahnrad Z90     & $0.257 Nm / 4.03 Nm$ &  3.44CHF & $57.0 g$ \\
           & 2x    & zusätzl. Achsen & -                    &  0.00CHF & $10.0 g$ \\
-          & 2x    & Kugellager      & -                    &  1.76CHF & $4.9 g$  \\
+          & 4x    & Kugellager      & -                    &  1.76CHF & $9.8 g$  \\
        
       
-          & \textbf{Tot.} &  & \textbf{0.257Nm} & \textbf{64.59CHF} & \textbf{211.0g} \\
+          & \textbf{Tot.} &  & \textbf{0.257Nm} & \textbf{64.59CHF} & \textbf{215.9g} \\
     \multirow{10}[2]{*}{B}
   	  &       &                 &                      &          &  \\
           &       &                 &                      &          &  \\
